--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                 <span class="wow animated bounceInRight animated animated" data-wow-delay="1.1s" style="visibility: visible; animation-delay: 1.1s; animation-name: bounceInRight;"><a target="_blank" href="javascript:;"></a></span>
             </div>
         </div>
-    </div>
-    <!-- header end -->
+    </div><!-- header end -->
     <!-- content star -->
     <div class="wrapper2">
         <div class="wrap">
