--- a/index.html
+++ b/index.html
@@ -164,8 +164,6 @@
                         <p>序号 作品名称 学校 作者 1 《醒》 武汉学院 赵辰坤/丰子丞/李洋 2 《北归》 华中师范大学 王芮/袁锴栩/何理……</p>
                     </a>
                 </li>
-
-
             </ul>
 
             <!--查看更多-->
@@ -287,8 +285,8 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <!--content end-->
+    </div><!--content end-->
+
     <!-- footer star -->
     <div class="wrapper5">
         <div class="wrap">
